--- a/components/com_k2/css/k2.css
+++ b/components/com_k2/css/k2.css
@@ -107,7 +107,7 @@ div.k2UsersBlock ul li {} /* Example CSS: display:block;clear:both;padding:2px 0
 .lastItem {border:none;} /* class appended on last list item */
 
 /* --- Avatars --- */
-.k2Avatar img {display:block;float:left;background:#fff;border:1px solid #ccc;padding:2px;margin:2px 4px 4px 0;}
+.k2Avatar img {display:block;float:left;border:1px solid #ccc;padding:2px;margin:2px 4px 4px 0;}
 
 /* --- Read more --- */
 a.k2ReadMore {}
@@ -136,13 +136,13 @@ div.userItemIsFeatured {background:url(../images/system/evidenza-silverglow.png)
 	Component: Item view
 ----------------------------------------------------------------------*/
 a.itemPrintThisPage {display:block;width:160px;margin:4px auto 16px;padding:4px;border:1px solid #ccc;text-align:center;color:#555;font-size:13px;}
-a.itemPrintThisPage:hover {background:#eee;text-decoration:none;}
+a.itemPrintThisPage:hover {text-decoration:none;}
 
 div.itemView {padding:8px 0 24px 0;margin:0 0 24px 0;border-bottom:1px dotted #ccc;} /* this is the item container for this view */
 div.itemIsFeatured {} /* Attach a class for each featured item */
 
 span.itemEditLink {float:right;display:block;padding:4px 0;margin:0;width:120px;text-align:right;}
-span.itemEditLink a {padding:2px 12px;border:1px solid #ccc;background:#eee;text-decoration:none;font-size:11px;font-weight:normal;}
+span.itemEditLink a {padding:2px 12px;border:1px solid #ccc;text-decoration:none;font-size:11px;font-weight:normal;}
 span.itemEditLink a:hover {background:#ffffcc;}
 
 div.itemHeader {}
@@ -237,7 +237,7 @@ div.itemAttachmentsBlock {padding:4px;border-bottom:1px dotted #ccc;}
 
 /* Author block */
 div.itemAuthorBlock {margin:0 0 16px 0;padding:8px;}
-	div.itemAuthorBlock img.itemAuthorAvatar {float:left;display:block;background:#fff;padding:4px;margin:0 8px 0 0;}
+	div.itemAuthorBlock img.itemAuthorAvatar {float:left;display:block;padding:4px;margin:0 8px 0 0;}
 	div.itemAuthorBlock div.itemAuthorDetails {margin:0;padding:4px 0 0 0;}
 	div.itemAuthorBlock div.itemAuthorDetails h3.authorName {margin:0 0 4px 0;padding:0;}
 	div.itemAuthorBlock div.itemAuthorDetails h3.authorName a {font-size:16px;}
@@ -261,7 +261,7 @@ div.itemRelated {margin-bottom:16px;padding:0;} /* Add overflow-x:scroll; if you
 	div.itemRelated h3 {}
 	div.itemRelated ul {}
 		div.itemRelated ul li {}
-		div.itemRelated ul li.k2ScrollerElement {float:left;overflow:hidden;border:1px solid #ccc;padding:4px;margin:0 4px 4px 0;background:#fff;} /* you need to insert this class in the related li element in item.php for this styling to take effect */
+		div.itemRelated ul li.k2ScrollerElement {float:left;overflow:hidden;border:1px solid #ccc;padding:4px;margin:0 4px 4px 0;} /* you need to insert this class in the related li element in item.php for this styling to take effect */
 		div.itemRelated ul li.clr {clear:both;height:0;line-height:0;display:block;float:none;padding:0;margin:0;border:none;}
 			a.itemRelTitle {}
 			div.itemRelCat {}
@@ -297,7 +297,7 @@ div.itemComments {padding:16px;}
 	div.itemComments ul.itemCommentsList li {padding:4px;margin:0;border-bottom:1px dotted #ddd;}
 	div.itemComments ul.itemCommentsList li.authorResponse {background:url(../images/system/stripes.png) repeat;}
 	div.itemComments ul.itemCommentsList li.unpublishedComment {background:#ffeaea;}
-	div.itemComments ul.itemCommentsList li img {float:left;margin:4px 4px 4px 0;padding:4px;background:#fff;border-bottom:1px solid #d7d7d7;border-left:1px solid #f2f2f2;border-right:1px solid #f2f2f2;}
+	div.itemComments ul.itemCommentsList li img {float:left;margin:4px 4px 4px 0;padding:4px;border-bottom:1px solid #d7d7d7;border-left:1px solid #f2f2f2;border-right:1px solid #f2f2f2;}
 	div.itemComments ul.itemCommentsList li span.commentDate {padding:0 4px 0 0;margin:0 8px 0 0;border-right:1px solid #ccc;font-weight:bold;font-size:14px;}
 	div.itemComments ul.itemCommentsList li span.commentAuthorName {font-weight:bold;font-size:14px;}
 	div.itemComments ul.itemCommentsList li p {padding:4px 0;}
@@ -324,7 +324,7 @@ div.itemCommentsForm h3 {margin:0;padding:0 0 4px 0;}
 	div.itemCommentsForm form label.formRecaptcha {display:block;margin:12px 0 0 2px;}
 	div.itemCommentsForm form textarea.inputbox {display:block;width:350px;height:160px;margin:0;}
 	div.itemCommentsForm form input.inputbox {display:block;width:350px;margin:0;}
-	div.itemCommentsForm form input#submitCommentButton {display:block;margin:16px 0 0 0;padding:4px;border:1px solid #ccc;background:#eee;font-size:16px;}
+	div.itemCommentsForm form input#submitCommentButton {display:block;margin:16px 0 0 0;padding:4px;border:1px solid #ccc;font-size:16px;}
 	div.itemCommentsForm form span#formLog {margin:0 0 0 20px;padding:0 0 0 20px;font-weight:bold;color:#CF1919;}
 	div.itemCommentsForm form .formLogLoading {background:url(../images/system/loading.gif) no-repeat left center;}
 
@@ -357,9 +357,9 @@ div.itemListCategoriesBlock {}
 /* --- Category block --- */
 div.itemListCategory {margin:4px 0;padding:8px;}
 	span.catItemAddLink {display:block;padding:8px 0;margin:0 0 4px 0;border-bottom:1px dotted #ccc;text-align:right;}
-	span.catItemAddLink a {padding:4px 16px;border:1px solid #ccc;background:#eee;text-decoration:none;}
+	span.catItemAddLink a {padding:4px 16px;border:1px solid #ccc;text-decoration:none;}
 	span.catItemAddLink a:hover {background:#ffffcc;}
-	div.itemListCategory img {float:left;display:block;background:#fff;padding:4px;margin:0 8px 0 0;}
+	div.itemListCategory img {float:left;display:block;padding:4px;margin:0 8px 0 0;}
 	div.itemListCategory h2 {}
 	div.itemListCategory p {}
 
@@ -372,7 +372,7 @@ div.itemListSubCategories {}
 				div.subCategory a.subCategoryImage,
 				div.subCategory a.subCategoryImage:hover {text-align:center;display:block;}
 				div.subCategory a.subCategoryImage img,
-				div.subCategory a.subCategoryImage:hover img {background:#fff;padding:4px;margin:0 8px 0 0;}
+				div.subCategory a.subCategoryImage:hover img {padding:4px;margin:0 8px 0 0;}
 				div.subCategory h2 {}
 				div.subCategory h2 a {}
 				div.subCategory h2 a:hover {}
@@ -400,7 +400,7 @@ div.catItemView {padding:4px;} /* this is the item container for this view - we 
 	div.catItemIsFeatured {} /* Attach a class for each featured item */
 
 span.catItemEditLink {float:right;display:block;padding:4px 0;margin:0;width:120px;text-align:right;}
-span.catItemEditLink a {padding:2px 12px;border:1px solid #ccc;background:#eee;text-decoration:none;font-size:11px;font-weight:normal;}
+span.catItemEditLink a {padding:2px 12px;border:1px solid #ccc;text-decoration:none;font-size:11px;font-weight:normal;}
 span.catItemEditLink a:hover {background:#ffffcc;}
 
 div.catItemHeader {}
@@ -487,10 +487,10 @@ div.userView {}
 	div.userBlock {margin:0 0 16px 0;padding:8px;clear:both;}
 
 		span.userItemAddLink {display:block;padding:8px 0;margin:0 0 4px 0;border-bottom:1px dotted #ccc;text-align:right;}
-		span.userItemAddLink a {padding:4px 16px;border:1px solid #ccc;background:#eee;text-decoration:none;}
+		span.userItemAddLink a {padding:4px 16px;border:1px solid #ccc;text-decoration:none;}
 		span.userItemAddLink a:hover {background:#ffffcc;}
 
-		div.userBlock img {display:block;float:left;background:#fff;padding:4px;margin:0 8px 0 0;}
+		div.userBlock img {display:block;float:left;padding:4px;margin:0 8px 0 0;}
 		div.userBlock h2 {}
 		div.userBlock div.userDescription {padding:4px 0;}
 		div.userBlock div.userAdditionalInfo {padding:4px 0;margin:8px 0 0 0;}
@@ -506,7 +506,7 @@ div.userItemIsFeatured {} /* Attach a class for each featured item */
 div.userItemViewUnpublished {opacity:0.9;border:4px dashed #ccc;background:#fffff2;padding:8px;margin:8px 0;}
 
 span.userItemEditLink {float:right;display:block;padding:4px 0;margin:0;width:120px;text-align:right;}
-	span.userItemEditLink a {padding:2px 12px;border:1px solid #ccc;background:#eee;text-decoration:none;font-size:11px;font-weight:normal;}
+	span.userItemEditLink a {padding:2px 12px;border:1px solid #ccc;text-decoration:none;font-size:11px;font-weight:normal;}
 	span.userItemEditLink a:hover {background:#ffffcc;}
 
 div.userItemHeader {}
@@ -647,13 +647,13 @@ div.latestItemsContainer {float:left;}
 /* Category info block */
 div.latestItemsCategory {margin:0 8px 8px 0;padding:8px;}
 	div.latestItemsCategoryImage {text-align:center;}
-	div.latestItemsCategoryImage img {background:#fff;padding:4px;margin:0 8px 0 0;}
+	div.latestItemsCategoryImage img {padding:4px;margin:0 8px 0 0;}
 div.latestItemsCategory h2 {}
 div.latestItemsCategory p {}
 
 /* User info block */
 div.latestItemsUser {margin:0 8px 8px 0;padding:8px;clear:both;}
-	div.latestItemsUser img {display:block;float:left;background:#fff;padding:4px;margin:0 8px 0 0;}
+	div.latestItemsUser img {display:block;float:left;padding:4px;margin:0 8px 0 0;}
 	div.latestItemsUser h2 {}
 	div.latestItemsUser p.latestItemsUserDescription {padding:4px 0;}
 	div.latestItemsUser p.latestItemsUserAdditionalInfo {padding:4px 0;margin:8px 0 0 0;}
@@ -907,8 +907,8 @@ div.k2BreadcrumbsBlock span.bcSeparator {padding:0 4px;font-size:14px;}
 /* --- Calendar --- */
 div.k2CalendarBlock {height:190px;margin-bottom:8px;} /* use this height value so that the calendar height won't change on Month change via ajax */
 div.k2CalendarLoader {background:#fff url(../images/system/k2CalendarLoader.gif) no-repeat 50% 50%;}
-table.calendar {margin:0 auto;background:#fff;border-collapse:collapse;}
-table.calendar tr td {text-align:center;vertical-align:middle;padding:2px;border:1px solid #f4f4f4;background:#fff;}
+table.calendar {margin:0 auto;border-collapse:collapse;}
+table.calendar tr td {text-align:center;vertical-align:middle;padding:2px;border:1px solid #f4f4f4;}
 table.calendar tr td.calendarNavMonthPrev {background:#f3f3f3;text-align:left;}
 table.calendar tr td.calendarNavMonthPrev a {font-size:20px;text-decoration:none;}
 table.calendar tr td.calendarNavMonthPrev a:hover {font-size:20px;text-decoration:none;}
@@ -920,7 +920,7 @@ table.calendar tr td.calendarDayName {background:#e9e9e9;font-size:11px;width:14
 table.calendar tr td.calendarDateEmpty {background:#fbfbfb;}
 table.calendar tr td.calendarDate {}
 table.calendar tr td.calendarDateLinked {padding:0;}
-table.calendar tr td.calendarDateLinked a {display:block;padding:2px;text-decoration:none;background:#eee;}
+table.calendar tr td.calendarDateLinked a {display:block;padding:2px;text-decoration:none;}
 table.calendar tr td.calendarDateLinked a:hover {display:block;background:#135cae;color:#fff;padding:2px;text-decoration:none;}
 table.calendar tr td.calendarToday {background:#135cae;color:#fff;}
 table.calendar tr td.calendarTodayLinked {background:#135cae;color:#fff;padding:0;}
@@ -969,7 +969,7 @@ div.k2SearchBlock form {}
 div.k2SearchBlock form input.inputbox {}
 div.k2SearchBlock form input.button {}
 div.k2SearchBlock form input.k2SearchLoading {background:url(../images/system/searchLoader.gif) no-repeat 100% 50%;}
-div.k2SearchBlock div.k2LiveSearchResults {display:none;background:#fff;position:absolute;z-index:99;border:1px solid #ccc;margin-top:-1px;}
+div.k2SearchBlock div.k2LiveSearchResults {display:none;position:absolute;z-index:99;border:1px solid #ccc;margin-top:-1px;}
 	/* Live search results (fetched via ajax) */
 	div.k2SearchBlock div.k2LiveSearchResults ul.liveSearchResults {list-style:none;margin:0;padding:0;}
 	div.k2SearchBlock div.k2LiveSearchResults ul.liveSearchResults li {border:none;margin:0;padding:0;}
