--- a/components/com_k2/templates/counterplan_graphic_title/css/item.css
+++ b/components/com_k2/templates/counterplan_graphic_title/css/item.css
@@ -1,89 +1,64 @@
-/* 
-    Document   : item
-    Created on : 21-mag-2013, 22.45.52
-    Author     : Gargiulo
-    Description:
-        Purpose of the stylesheet follows.
-*/
-    
 /* k2 image title */
-.titleoverimg ul{
 
-list-style: none;
-margin: 0;
-padding: 0;
-
-}
-
-.titleoverimg ul li{
-display: inline-block;
-color: #999;
-float: left;
-font-size: 12px;
-margin-right: 16px;
-}
-
-article.counterplan{
-    position: relative;
-}
 
 .articleabitoverimg{
-      z-index: 9;
+    z-index: 9;
     position: relative; 
-top: -9em; 
-background: white;
-background: rgba(255,255,255,.98);
+    top: -9em; 
+    background: white;
+    background: rgba(255,255,255,.98);
 
--o-box-shadow: 0 0 3px #888;
--ms-box-shadow: 0 0 3px #888;
--moz-box-shadow: 0 0 3px #888;
--webkit-box-shadow: 0 0 3px #888;
--khtml-box-shadow: 0 0 3px #888;
-box-shadow: 0 0 3px #888;
+/*
+    -o-box-shadow: 0 0 5px #888;
+    -moz-box-shadow: 0 0 5px #888;
+    -ms-box-shadow: 0 0 5px #888;
+    -webkit-box-shadow: 0 0 5px #888;
+    -khtml-box-shadow: 0 0 5px #888;
+    box-shadow: 0 0 5px #888;
+*/
 
- -o-transition: all .4s linear;
-  -moz-transition: all .4s linear;
-  -ms-transition: all .4s linear;
-  -webkit-transition: all .4s linear;
-  -khtml-transition: all .4s linear;
-  transition: all .6s linear;
-  
-  padding: 3px;
+
+
+
+    padding: 3px;
 }
 
 
 .titleoverimg{
     width: 100%;
-   z-index: 9;
-position: absolute; 
-top: 2em; 
-background: white;
-background: rgba(255,255,255,.85);
--o-box-shadow: 0 0 5px #888;
--moz-box-shadow: 0 0 5px #888;
--ms-box-shadow: 0 0 5px #888;
--webkit-box-shadow: 0 0 5px #888;
--khtml-box-shadow: 0 0 5px #888;
-box-shadow: 0 0 5px #888;
+    z-index: 9;
+    position: absolute; 
+    top: 2em; 
+    background: white;
+    background: rgba(255,255,255,.93);
+  /*  -o-box-shadow: 0 0 5px #888;
+    -moz-box-shadow: 0 0 5px #888;
+    -ms-box-shadow: 0 0 5px #888;
+    -webkit-box-shadow: 0 0 5px #888;
+    -khtml-box-shadow: 0 0 5px #888;
+  
+    box-shadow: 0 0 5px #888;
+  */
 
- -o-transition: all .4s linear;
-  -moz-transition: all .4s linear;
-  -ms-transition: all .4s linear;
-  -webkit-transition: all .4s linear;
-  -khtml-transition: all .4s linear;
-  transition: all .6s linear;
+
 
 }
 
-.itemImage img{
-    -o-box-shadow: 0 0 5px #888;
--moz-box-shadow: 0 0 5px #888;
--ms-box-shadow: 0 0 5px #888;
--webkit-box-shadow: 0 0 5px #888;
--khtml-box-shadow: 0 0 5px #888;
-box-shadow: 0 0 5px #888;
-
+itemImage img{
+  /*  -o-box-shadow: 0 0 5px #888;
+    -moz-box-shadow: 0 0 5px #888;
+    -ms-box-shadow: 0 0 5px #888;
+    -webkit-box-shadow: 0 0 5px #888;
+    -khtml-box-shadow: 0 0 5px #888;
+    box-shadow: 0 0 5px #888;
+  */
 }
+
+/*
+.titleoverimg:hover{
+  top:0em;
+}*/
+
 /* for empty images in titleoverimage layout dude 
 .counterplan .itemImage{
     min-height: 250px !important; 
@@ -113,3 +88,40 @@ itemImage:hover + .articleabitoverimg{
   top:0em;
 }*/
 /* end k2 image title */
+
+
+    .articleabitoverimg,
+    .titleoverimg{
+
+-o-transition: all .36s linear;
+-ms-transition: all .36s linear;
+-moz-transition: all .36s linear;
+-webkit-transition: all .36s linear;
+-khtml-transition: all .36s linear;
+        transition: all .36s linear;
+    }
+    
+    
+    /* ITEM IMAGE NO OVERLAY */
+.creativeshowim .itemImage,
+.creativeshowim .titleoverimg,
+.creativeshowim .articleabitoverimg{
+    margin-bottom: 0px !important;
+    position: relative !important;
+    top: 0px !important;
+}
+
+@media (max-width:890px){
+
+
+
+    /* ITEM IMAGE NO OVERLAY */
+    .itemImage,
+    .titleoverimg,
+    .articleabitoverimg{
+        margin-bottom: 0px !important;
+        position: relative !important;
+        top: 0px !important;
+    }
+    
+}
